2006-11-05  Ales Hakl  <ales at hakl dot net>

	* src/hash.c (get_hash): Default hash function for all objects

2006-11-04  Ales Hakl  <ales at hakl dot net>

	* *: Removed concept of interpreter context

	* src/repl.c (main): -L option

	* lib/load.c (dfsch_load_scm): Searching for source files.

2006-10-26  Ales Hakl  <ales at hakl dot net>

	* src/dfsch.c (dfsch_try): restore continuation stack.
	(dfsch_try): removed unnecesary casts

2006-10-24  Ales Hakl  <ales at hakl dot net>

	* src/dfsch.c (dfsch_try): invalidate inner continuations
	Removed all occurencies of "volatile" (it's unnecessary)

2006-10-22  Ales Hakl  <ales at hakl dot net>

	* src/number.c (dfsch__number_native_register): derive value of pi
	from math library (pi = 4*arctan 1)
	(native_exp): exp without arguments returns e

2006-10-21  Ales Hakl  <ales at hakl dot net>

	* scm/test.scm (strings): Some tests for strings.
	(*utf8*): utf-8 related tests 

	* src/dfsch.c (dfsch_apply_impl): typeless-value can be applied
	and evaluates to empty list (quite useless feature)
	(dfsch_apply_impl): apply_impl is internal implementation
	function, therefore should be static

	* src/native.c (native_reduce): More Common Lisp like reduce.

2006-10-20  Ales Hakl  <ales at hakl dot net>

	* src/native.c (native_reduce): reduce function

	* src/number.c (dfsch_make_number_from_long): Smallnums allocated
	on heap

	* lib/regex.c (dfsch_regex_substrings): Dereferencing
	uninitialized pointer leads to undefined behavior :)

2006-10-15  Ales Hakl  <ales at hakl dot net>

	* dfsch/dfsch.h (DFSCH_SYMBOL_CACHE): macro for defining symbol
	caching functions

	* src/dfsch.c (dfsch_eval_proc_impl): Added thread specific data 
	caching (I expect some performance gain from this, because
	get_thread_info() is (should be) slow)

2006-10-12  Ales Hakl  <ales at hakl dot net>

	* src/repl.c (main): VERSION -> PACKAGE_VERSION (some versions of 
	something needs this)

2006-10-08  Ales Hakl  <ales at hakl dot net>
